Recursive freeze on entity beans
Noting that the freeze needs to occur after secondary queries have executed